# cmake-app-template

./: CMakeLists.txt  Doxyfile  Makefile  README.md  configure
src/: hello.cc  hello.h  main.cc
test/: hello.cc  my_test.cc
